--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 html{
-  --background-color: #fff4ed;
+  --background-color: #ffeded;
   --foreground-color: #240909;
-  --text-color-dark: #052840;
-  --text-color: #02395E;
+  --text-color-dark: #1c1b1d;
+  --text-color: #302433;
   --text-color-light: #999;
-  --accent-color-dark: #940f0f;
-  --accent-color: #fd4a4a;
-  --accent-color-light: rgb(0 22 216 / 10%);
+  --accent-color-dark: #491054;
+  --accent-color: rgb(115 34 131);
+  --accent-color-light: rgb(115 34 131 / 10%);
   --overlay-color: rgba(255, 255, 255, .8);
-  --overlay-edge-color: rgba(0, 0, 0, .08)
+  --overlay-edge-color: rgba(0, 0, 0, .08);
 }
 
 .dark-only{
